# UD_test_task

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  public_env  pyproject.toml  requirements.txt
.cursor/rules/: README.md  code-review.mdc  database.mdc  index.mdc  new-feature.mdc  schemas.mdc
docs/: QUESTIONS_AND_ANSWERS.md
migrations/: env.py
migrations/versions/: eea63f28c7d1_init.py
src/app/: main.py
src/app/common/: database.py  datetime_utils.py  decorators.py
src/app/config/: auction_config.py  settings.py
src/app/features/auction/endpoints/: __init__.py  bids.py  lots.py  websocket.py
src/app/features/auction/models/: __init__.py  bid.py  lot.py
src/app/features/auction/repositories/: __init__.py  bid_repository.py  lot_repository.py
src/app/features/auction/schemas/: __init__.py  bid.py  lot.py
src/app/features/auction/services/: __init__.py  lot_service.py
src/app/infrastructure/: background_tasks.py
src/app/infrastructure/websocket/: __init__.py  manager.py  types.py
static/: app.js  index.html  style.css
